--- a/remote-control.css
+++ b/remote-control.css
@@ -1,7 +1,7 @@
 #remote-control-overlay {
   position: fixed;
   z-index: 2;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgb(0 0 0 / 10%);
   width: 100%;
   height: 100%;
 }
