style: add transition effect for brightness and temperature change

--- a/MMM-Remote-Control.css
+++ b/MMM-Remote-Control.css
@@ -5,4 +5,9 @@
   z-index: 2;
   width: 100vw;
   height: 100vh;
+  transition: background-color 1.5s ease;
+}
+
+body > *:not(script, style) {
+  transition: filter 1.5s ease-in-out;
 }
