--- a/remote.css
+++ b/remote.css
@@ -484,116 +484,59 @@ input[type="checkbox"]:checked ~ .fa-check-square-o {
   display: block;
 }
 
-/* slider appearance created with https://danielstern.ca/range.css/?ref=css-tricks#/ */
+:root {
+  --track-color: #999;
+}
+
 input[type="range"] {
+  -webkit-appearance: none;
   appearance: none;
-  background: #000;
+  background: transparent;
   width: calc(100% - 0.5em);
+  height: 30px;
+  padding: 0;
 }
 
 input[type="range"]:focus {
+  --track-color: #9c9c9c;
+
   outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+  border: none;
+  margin-top: -10px;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
-  cursor: pointer;
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-  background: #999;
+  background: var(--track-color);
   border-radius: 10px;
-  border: 2px solid rgb(0 0 0 / 0%);
+  border: none;
 }
 
-input[type="range"]::-webkit-slider-thumb {
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-  border: 2px solid rgb(0 0 0 / 0%);
-  height: 30px;
+input[type="range"]::-moz-range-thumb {
   width: 30px;
-  border-radius: 30px;
+  height: 30px;
+  border-radius: 50%;
   background: #fff;
   cursor: pointer;
-  appearance: none;
-  margin-top: -12px;
-}
-
-input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #9c9c9c;
+  border: none;
 }
 
 input[type="range"]::-moz-range-track {
   width: 100%;
   height: 10px;
-  cursor: pointer;
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-  background: #999;
+  background: var(--track-color);
   border-radius: 10px;
-  border: 2px solid rgb(0 0 0 / 0%);
-}
-
-input[type="range"]::-moz-range-thumb {
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-  border: 2px solid rgb(0 0 0 / 0%);
-  height: 30px;
-  width: 30px;
-  border-radius: 30px;
-  background: #fff;
-  cursor: pointer;
-}
-
-input[type="range"]::-ms-track {
-  width: 100%;
-  height: 10px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-
-input[type="range"]::-ms-fill-lower {
-  background: #969696;
-  border: 2px solid rgb(0 0 0 / 0%);
-  border-radius: 20px;
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-}
-
-input[type="range"]::-ms-fill-upper {
-  background: #999;
-  border: 2px solid rgb(0 0 0 / 0%);
-  border-radius: 20px;
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-}
-
-input[type="range"]::-ms-thumb {
-  box-shadow:
-    0 0 0 rgb(0 0 0 / 0%),
-    0 0 0 rgb(13 13 13 / 0%);
-  border: 2px solid rgb(0 0 0 / 0%);
-  width: 30px;
-  border-radius: 30px;
-  background: #fff;
-  cursor: pointer;
-  height: 10px;
-}
-
-input[type="range"]:focus::-ms-fill-lower {
-  background: #999;
-}
-
-input[type="range"]:focus::-ms-fill-upper {
-  background: #9c9c9c;
+  border: none;
 }
 
 code,
